tests/conformance/typecheck/invalid/function_arity_mismatch.ks
// Function arity mismatch
fun add(a: Int, b: Int): Int = a + b
val x = add(1)
